# F3D

./: .gitignore  CMakeLists.txt  to_snake_case.py
assets/meshes/: mesh_a.mtl  mesh_b.mtl  mesh_c.mtl
include/: ecs.h
src/: main.cpp
src/components/: Renderable.cpp  Renderable.h  maps.cpp  model.h
src/core/: glerror.h
src/ecs/: component.h  ecs.cpp  ecs.h  ecs_base.h  entity.h  entity_assign.h  event.h  include.h  system.h  types.h
src/gldata/: FBOData.cpp  FBOData.h  TextureData.h  VAOData.cpp  VAOData.h  VBOData.cpp  fbo_data.cpp  fbo_data.h  gl_data.cpp  gl_data.h  ssbo_data.cpp  ssbo_data.h  texture_data.cpp  texture_data.h  vao_data.cpp  vao_data.h  vbo_data.cpp  vbo_data.h
src/logging/: LogOutput.cpp  LogOutput.h  Logger.cpp  Logger.h  log_output.cpp  log_output.h  logger.cpp  logger.h  logging.cpp  logging.h
src/math/: mat.h  mat_project.impl  mat_transform.impl  transformation.cpp  transformation.h
src/model/: instances_component.h  mesh_group.cpp  mesh_group.h  mesh_group_component.h  mesh_group_gpu_data.cpp  mesh_group_gpu_data.h  transform.h
src/resource/: combined.txt  resource_base.h  resource_globals.cpp  resource_globals.h  resource_logging.h  resource_state.cpp  resource_state.h  resource_types.h
src/resources/: LoadingThread.cpp  LoadingThread.h  MeshData.cpp  MeshData.h  ResourceData.cpp  ResourceData.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.tpp  geometry.cpp  gpt.txt  gpt2.txt  image.cpp  image_data.cpp  image_data.h  loading_thread.cpp  loading_thread.h  mesh_data.cpp  mesh_data.h  resource.cpp  resource_data.cpp  resource_data.h  resource_manager.cpp  resource_manager.h  resource_manager.tpp
src_/components/: maps.h  model.cpp
src_/gldata/: FBOData.cpp  FBOData.h  TextureData.cpp  VBOData.h
src_/resources/: geometry.h  image.h  resource.h  resource_manager.cpp  resource_manager.h
src__/: glad.c  glad.h  main.cpp
src__/camera/: camera_controller.cpp  camera_controller.h  camera_controller_system.cpp  camera_controller_system.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
src__/core/: config.h  glerror.h
src__/ecs/: component_entity_list.h  ecs.h  ecs_base.h  entity.h  entity_iterator.h  entity_subset.h  hash.h  ids.h  types.h  (+2 more)
(+142 files in other folders)
